--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,50 +1,54 @@
 <div class="bg-white">
-  <nav class="navbar navbar-dark bg-primary border-bottom border-danger">
-      <a class="navbar-brand" href="/">
-          Pure Objectives and Key Results
-      </a>
-      <div class="navbar-collapse">
-        <ul class="navbar-nav">
-          <li *ngIf="!auth.isLoggedIn()" class="nav-item">
-            <a routerLink="/login" class="nav-link">Log In</a>
-          </li>
-          <li *ngIf="auth.isLoggedIn()" class="nav-item">
-            <a routerLink="/company" class="nav-link">{{auth.getUserDetails()?.name}}</a>
-          </li>
-          <li *ngIf="auth.isLoggedIn()" class="nav-item">
-            <a (click)="auth.logout()" class="nav-link">Logout</a>
-          </li>
-        </ul>
-      </div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom border-danger">
+    <a class="navbar-brand" href="/">Pure Objectives and Key Results</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li *ngIf="!auth.isLoggedIn()" class="nav-item">
+          <a routerLink="/login" class="nav-link">Log In</a>
+        </li>
+        <li *ngIf="auth.isLoggedIn()" class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Logged in as {{auth.getUserDetails()?.name}}
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/" (click)="auth.logout()">Logout</a>
+          </div>
+        </li>
+      </ul>
+    </div>
   </nav>
   <main class="bd-masthead" role="main">
     <div class="container-fluid mt-3">
-        <router-outlet></router-outlet>
+      <router-outlet></router-outlet>
     </div>
   </main>
 </div>
 <!--Footer-->
 <footer class="page-footer font-small bg-primary text-white pt-4">
-    <div class="container-fluid text-center text-md-left">
-      <div class="row">
-        <div class="col-md-6 mt-md-0 mt-3">
-          <h5 class="text-uppercase">Resources</h5>
-          <p><a class="text-light" href="/faq">Frequently Asked Questions</a></p>
-        </div>
-        <hr class="clearfix w-100 d-md-none pb-3">
-        <div class="col-md-3 mb-md-0 mb-3">
-            <h5 class="text-uppercase">Get in touch</h5>
-            <ul class="list-unstyled">
-              <li>
-                <p>nilseng.com</p>
-              </li>
-              <li>
-                <p>teodor.nilseng@gmail.com</p>
-              </li>
-            </ul>
-          </div>
+  <div class="container-fluid text-center text-md-left">
+    <div class="row">
+      <div class="col-md-6 mt-md-0 mt-3">
+        <h5 class="text-uppercase">Resources</h5>
+        <p><a class="text-light" href="/faq">Frequently Asked Questions</a></p>
+      </div>
+      <hr class="clearfix w-100 d-md-none pb-3">
+      <div class="col-md-3 mb-md-0 mb-3">
+        <h5 class="text-uppercase">Get in touch</h5>
+        <ul class="list-unstyled">
+          <li>
+            <p>nilseng.com</p>
+          </li>
+          <li>
+            <p>teodor.nilseng@gmail.com</p>
+          </li>
+        </ul>
       </div>
     </div>
-    <div class="footer-copyright text-center py-3">© 2019 Copyright: Nilseng Consulting</div>
-  </footer>
-
+  </div>
+  <div class="footer-copyright text-center py-3">© 2019 Copyright: Nilseng Consulting</div>
+</footer>
