--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -1,3 +1,6 @@
 <p>
-  Welcome to {{auth.getUserDetails()?.company}}'s objectives and key results view.
+  {{auth.getUserDetails()?.company}}'s objectives and key results.
 </p>
+<button *ngIf="!newOKR" class="btn btn-success my-2" (click)="setNewOKR()">New OKR</button>
+<app-new-okr *ngIf="newOKR" (hide)="hideNewOkr($event)"></app-new-okr>
+<app-okr *ngFor="let okr of okrs" [okr]="okr"></app-okr>
