--- a/src/app/okr/new-okr/new-okr.component.html
+++ b/src/app/okr/new-okr/new-okr.component.html
@@ -2,8 +2,8 @@
   <div class="col-xs rounded bg-light">
     <div class="form-group mb-1">
       <ul class="list-group">
-        <li class="list-group-item text-light bg-dark p-1">
-            <input class="form-control p-1" [(ngModel)]="okr.objective" placeholder="Objective" />
+        <li class="list-group-item bg-light border-0 p-1">
+          <input class="form-control p-1" [(ngModel)]="okr.objective" placeholder="Objective" />
         </li>
         <li class="list-group-item bg-light border-0 p-1" *ngFor="let kr of okr.keyResults;index as i">
           <div class="form-inline align-middle">
@@ -13,6 +13,17 @@
         </li>
         <li class="list-group-item border-0 bg-light p-1">
           <button class="btn btn-dark float-right py-1" (click)="addKeyResult()">+</button>
+        </li>
+        <li class="list-group-item bg-light border-0 p-1">
+          <input class="form-control p-1" #searchBox (keyup)="search(searchBox.value)" [(ngModel)]="okr.parent"
+            placeholder="Assign to user" />
+          <ul *ngIf="users$">
+            <li *ngFor="let user of users$ | async">
+              <a>
+                {{user.name}}
+              </a>
+            </li>
+          </ul>
         </li>
       </ul>
       <div class="form-inline">
