--- a/src/app/okr/okr.component.html
+++ b/src/app/okr/okr.component.html
@@ -6,6 +6,7 @@
         {{kr.keyResult}}
       </li>
     </ul>
-    <div *ngIf="owner">Assigned to <span class="badge badge-secondary">{{owner.name}}</span></div>
+    <div *ngIf="owner">Assigned to <span class="badge badge-primary">{{owner.name}}</span></div>
+    <div *ngIf="parent">Linked to <span class="badge badge-secondary">{{parent.objective}}</span></div>
   </div>
 </div>
