Added input validation for password validation

--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -1,7 +1,7 @@
 <p>
   {{auth.getUserDetails()?.company}}'s objectives and key results.
 </p>
-<button *ngIf="!newOKR" class="btn btn-primary" (click)="setNewOKR()">New OKR</button>
+<button *ngIf="!newOKR" class="btn btn-primary mb-1" (click)="setNewOKR()">New OKR</button>
 <app-new-okr *ngIf="newOKR" (hide)="hideNewOkr($event)"></app-new-okr>
 <div class="row">
   <div class="col-m mx-2">
