--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,12 +1,20 @@
-<form (submit)="login()" style="width: 18rem;">
-  <div class="form-group">
-    <label for="email">Email</label>
-    <input type="email" class="form-control" name="email" placeholder="Enter email" [(ngModel)]="credentials.email">
+<div class="row">
+  <div class="col">
+    <form (submit)="login()" style="width: 18rem;">
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" class="form-control" name="email" placeholder="Enter email" [(ngModel)]="credentials.email">
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" name="password" placeholder="Password"
+          [(ngModel)]="credentials.password">
+      </div>
+      <button type="submit" class="btn btn-primary m-2">Log in</button>
+      <button type="button" routerLink="/register" class="btn btn-success m-2">Register</button>
+    </form>
   </div>
-  <div class="form-group">
-    <label for="password">Password</label>
-    <input type="password" class="form-control" name="password" placeholder="Password" [(ngModel)]="credentials.password">
+  <div class="col m-2">
+    <p>This site is still under development. Feel free to register and stay tuned for more nice functionality.</p>
   </div>
-  <button type="submit" class="btn btn-primary m-2">Log in</button>
-  <button type="button" routerLink="/register" class="btn btn-success m-2">Register</button>
-</form>
+</div>
