--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,20 +1,29 @@
-<form (submit)="register()" style="width: 18rem;">
-  <div class="form-group">
-    <label for="company">Company</label>
-    <input type="text" class="form-control" name="company" placeholder="Enter company" [(ngModel)]="credentials.company">
+<div class="row">
+  <div class="col">
+    <form (submit)="register()" style="width: 18rem;">
+      <div class="form-group">
+        <label for="company">Company</label>
+        <input type="text" class="form-control" name="company" placeholder="Enter company"
+          [(ngModel)]="credentials.company">
+      </div>
+      <div class="form-group">
+        <label for="name">Full name</label>
+        <input type="text" class="form-control" name="name" placeholder="Enter your name"
+          [(ngModel)]="credentials.name">
+      </div>
+      <div class="form-group">
+        <label for="email">Email address</label>
+        <input type="email" class="form-control" name="email" placeholder="Enter email" [(ngModel)]="credentials.email">
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" name="password" placeholder="Password"
+          [(ngModel)]="credentials.password">
+      </div>
+      <button type="submit" class="btn btn-success m-2">Register</button>
+    </form>
   </div>
-  <div class="form-group">
-    <label for="name">Full name</label>
-    <input type="text" class="form-control" name="name" placeholder="Enter your name" [(ngModel)]="credentials.name">
+  <div class="col m-2">
+    <p>This site is still under development. Feel free to register and stay tuned for more nice functionality.</p>
   </div>
-  <div class="form-group">
-    <label for="email">Email address</label>
-    <input type="email" class="form-control" name="email" placeholder="Enter email" [(ngModel)]="credentials.email">
-  </div>
-  <div class="form-group">
-    <label for="password">Password</label>
-    <input type="password" class="form-control" name="password" placeholder="Password"
-      [(ngModel)]="credentials.password">
-  </div>
-  <button type="submit" class="btn btn-success m-2">Register</button>
-</form>
+</div>
