Added encodeURIComponent before generating jwt to handle special characters

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -60,11 +60,10 @@
       </li>
     </ul>
     <h5>What are Objectives and Key Results?</h5>
-    <p>An Objective is what you would like to achieve, while Key Results are what you
+    <p>By using Objectives and Key Results you will be able to make your organization work focused towards
+        common goals. An Objective is what you would like to achieve, while Key Results are what you
       need to measure to reach the objective. Combine these and you have an OKR. PureOKRs aligns all
       OKRs in your organization, assigns them to employees and let's you measure your progress.
-      By using Objectives and Key Results you will be able to make your organization work focused towards
-      the same goals.
     </p>
   </div>
 </div>
