Added OKR tree structure and changed design

--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -3,8 +3,6 @@
 </p>
 <button *ngIf="!newOKR" class="btn btn-primary mb-1" (click)="setNewOKR()">New OKR</button>
 <app-new-okr *ngIf="newOKR" (hide)="hideNewOkr($event)"></app-new-okr>
-<div class="row">
-  <div *ngIf="okrs" class="col-m mx-2">
-    <app-okr *ngFor="let okr of okrs" class="m-1" [okr]="okr"></app-okr>
-  </div>
+<div *ngIf="okrs">
+  <app-okr *ngFor="let okr of okrs" class="m-1" [okr]="okr"></app-okr>
 </div>
