--- a/src/app/okr/okr.component.html
+++ b/src/app/okr/okr.component.html
@@ -1,12 +1,18 @@
-<div class="row rounded bg-light p-1 m-1">
-  <div class="col-s">
-    {{okr.objective}}
-    <ul *ngIf="keyResults">
-      <li *ngFor="let kr of keyResults">
+<div class="card bg-light border border-primary p-2 m-1" style="width: 30rem;">
+  <h5 class="card-title">{{okr.objective}}</h5>
+  <div class="card-body m-0">
+    <ul *ngIf="keyResults" class="list-group">
+      <li *ngFor="let kr of keyResults" class="list-group-item">
         {{kr.keyResult}}
       </li>
     </ul>
-    <div *ngIf="owner">Assigned to <span class="badge badge-primary">{{owner.name}}</span></div>
-    <div *ngIf="parent">Linked to <span class="badge badge-secondary">{{parent.objective}}</span></div>
+    <div *ngIf="owner" class="mt-2">Assigned to <span class="badge badge-primary">{{owner.name}}</span></div>
+    <div *ngIf="parent">Parent: <span class="badge badge-secondary">{{parent.objective}}</span></div>
+    <div *ngIf="!showChildren && (okr.children.length > 0)" class="btn btn-link p-0 my-4" (click)="getChildren()">
+      Child Objectives ({{okr.children.length}})
+    </div>
   </div>
+</div>
+<div *ngIf="showChildren" class="ml-4">
+  <app-okr *ngFor="let child of children" [okr]="child">child</app-okr>
 </div>
