OKR card design changes

--- a/src/app/okr/new-okr/new-okr.component.html
+++ b/src/app/okr/new-okr/new-okr.component.html
@@ -1,4 +1,4 @@
-<div class="card bg-light border border-primary p-2 m-1" style="width: 18rem;">
+<div class="card bg-light border border-primary p-2 m-1 w-75">
   <div class="form-group">
     <h5 class="card-title"><input class="form-control p-1" [(ngModel)]="okr.objective" placeholder="Objective" /></h5>
     <p *ngIf="noObjective" class=" alert alert-warning m-0 p-1">An objective is required to save an OKR</p>
