--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="bg-white">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom border-danger">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary border-bottom border-danger">
     <a class="navbar-brand" href="/">Pure Objectives and Key Results</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
