--- a/src/app/okr/okr.component.html
+++ b/src/app/okr/okr.component.html
@@ -1,8 +1,21 @@
-<div class="card bg-light border border-primary p-2 m-1 w-75">
+<div class="card bg-white border-0 p-2 m-1 w-75">
   <h5 class="card-title">
     <span>{{okr.objective}}</span>
-    <button class="btn btn-danger btn-sm float-right">Delete</button>
-    <button class="btn btn-dark btn-sm float-right mr-1">Edit</button>
+    <span class="dropdown float-right">
+      <button class="btn p-0 m-0" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+        aria-haspopup="true" aria-expanded="false">
+        <svg width="27" height="4">
+          <circle cx="4" cy="2" r="2" fill="black" />
+          <circle cx="13" cy="2" r="2" fill="black" />
+          <circle cx="22" cy="2" r="2" fill="black" />
+        </svg>
+      </button>
+      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" href="#">Add Child Objective</a>
+        <a class="dropdown-item" href="#">Edit</a>
+        <a class="dropdown-item" href="#">Delete</a>
+      </div>
+    </span>
   </h5>
   <div class="card-body m-0">
     <ul *ngIf="keyResults" class="list-group">
