--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sm rounded bg-light m-2">
+  <div class="col-sm rounded bg-light p-4 ml-4 mb-4 mr-4">
     <form (submit)="register()" style="width: 18rem;">
       <div class="form-group">
         <label for="company">Company</label>
@@ -34,7 +34,7 @@
       <button type="submit" class="btn btn-success m-2">Register</button>
     </form>
   </div>
-  <div class="col-sm rounded bg-light m-2 p-4">
+  <div class="col-sm rounded bg-light p-4 mb-4 mr-4">
     <h5>Why Objectives and Key Results?</h5>
     <ul>
       <li>
