mobile adapted okr card size

--- a/src/app/okr/okr.component.html
+++ b/src/app/okr/okr.component.html
@@ -1,4 +1,4 @@
-<div class="card bg-white border-0 p-2 m-1 w-75">
+<div class="okr card bg-white border-0 p-2 m-1">
   <h5 class="card-title">
     <span>{{okr.objective}}</span>
     <span class="dropdown float-right">
