--- a/src/app/okr/okr.component.css
+++ b/src/app/okr/okr.component.css
@@ -1,10 +1,12 @@
 .okr{
-    width: 50%;
+    width: 500px;
+    max-width: 500px;
 }
 
 @media only screen and (max-width: 768px) {
     /* For mobile phones: */
     [class*="okr"] {
-      width: 80%;
+      width: 100%;
+      max-width: 100%;
     }
   }
