--- a/src/app/okr/okr.component.html
+++ b/src/app/okr/okr.component.html
@@ -1,8 +1,8 @@
-<div class="okr card bg-white border-0 p-2 m-1">
+<div class="okr card bg-light border-0 p-2 m-1">
   <h5 class="card-title">
     <span>{{okr.objective}}</span>
     <span class="dropdown float-right">
-      <button class="btn p-0 m-0" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+      <button class="btn bg-light p-0 m-0" type="button" id="dropdownMenuButton" data-toggle="dropdown"
         aria-haspopup="true" aria-expanded="false">
         <svg width="27" height="4">
           <circle cx="4" cy="2" r="2" fill="black" />
@@ -17,14 +17,14 @@
       </div>
     </span>
   </h5>
-  <div class="card-body m-0">
+  <div class="card-body pt-0 pr-0 m-0">
+    <div class="badge badge-primary float-right ml-4 mr-0 my-1">{{owner.name}}</div>
     <ul *ngIf="keyResults" class="list-group">
-      <li *ngFor="let kr of keyResults" class="list-group-item border border-primary rounded-0 border-right-0 border-top-0 border-bottom-0 py-1">
+      <li *ngFor="let kr of keyResults"
+        class="list-group-item bg-white border border-primary rounded-0 border-right-0 border-top-0 border-bottom-0 py-1 my-1">
         {{kr.keyResult}}
       </li>
     </ul>
-    <div *ngIf="owner" class="my-1">Assigned to <span class="font-weight-bold text-white bg-primary rounded p-1 mb-1">{{owner.name}}</span></div>
-    <div *ngIf="parent">Parent: <span class="font-weight-bold text-white bg-secondary rounded p-1">{{parent.objective}}</span></div>
     <div *ngIf="!showChildren && (okr.children.length > 0)" class="btn btn-link p-0 mt-2" (click)="getChildren()">
       Child Objectives ({{okr.children.length}})
     </div>
