fixed owner label

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,6 +28,7 @@
       <div class="col">
         <router-outlet></router-outlet>
       </div>
+      <div class="col-sm-1"></div>
     </div>
   </div>
 </main>
