--- a/src/app/okr/new-okr/new-okr.component.html
+++ b/src/app/okr/new-okr/new-okr.component.html
@@ -1,4 +1,4 @@
-<div class="form bg-white border-0 rounded p-2 m-1 w-75">
+<div class="okr form bg-white border-0 rounded p-2 m-1">
   <input class="form-control p-1" [(ngModel)]="okr.objective" placeholder="Objective" />
   <p *ngIf="noObjective" class=" alert alert-warning m-0 p-1">An objective is required to save an OKR</p>
   <div class="input-group mt-1" *ngFor="let kr of okr.keyResults;index as i">
