--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -4,5 +4,5 @@
 <button *ngIf="!newOKR" class="btn btn-primary m-1" (click)="setNewOKR()">New OKR</button>
 <app-new-okr *ngIf="newOKR" (hide)="hideNewOkr($event)"></app-new-okr>
 <div *ngIf="okrs">
-  <app-okr *ngFor="let okr of okrs" class="m-1" [okr]="okr"></app-okr>
+  <app-okr *ngFor="let okr of okrs" class="m-1" [okr]="okr" (hideOkrId)="hideOkr($event)"></app-okr>
 </div>
