--- a/src/app/okr/okr.component.html
+++ b/src/app/okr/okr.component.html
@@ -13,7 +13,7 @@
       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
         <a class="dropdown-item" href="#">Add Child Objective</a>
         <a class="dropdown-item" href="#">Edit</a>
-        <a class="dropdown-item" href="#">Delete</a>
+        <a class="dropdown-item" (click)="deleteOKR()">Delete</a>
       </div>
     </span>
   </h5>
