--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -1,5 +1,5 @@
 <h2 class="text-light m-1">
-  {{auth.getUserDetails()?.company}}'s objectives and key results.
+  {{user.company}}'s objectives and key results.
 </h2>
 <button *ngIf="!newOKR" class="btn btn-primary m-1" (click)="setNewOKR()">New OKR</button>
 <app-new-okr *ngIf="newOKR" (hide)="hideNewOkr($event)"></app-new-okr>
