--- a/src/app/okr/okr.component.html
+++ b/src/app/okr/okr.component.html
@@ -10,10 +10,10 @@
           <circle cx="22" cy="2" r="2" fill="black" />
         </svg>
       </button>
-      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <a class="dropdown-item" href="#">Add Child Objective</a>
         <a class="dropdown-item" href="#">Edit</a>
-        <a class="dropdown-item" (click)="deleteOKR()">Delete</a>
+        <a class="dropdown-item" href="#" (click)="deleteOKR()">Delete</a>
       </div>
     </span>
   </h5>
