--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -34,7 +34,7 @@
       <button type="submit" class="btn btn-success m-2">Register</button>
     </form>
   </div>
-  <div class="col-sm rounded bg-light p-4 mb-4 mr-4">
+  <div class="col-sm rounded bg-light p-4 mb-4 mr-4 ml-4">
     <h5>Why Objectives and Key Results?</h5>
     <ul>
       <li>
