--- a/src/app/okr/edit-okr/edit-okr.component.html
+++ b/src/app/okr/edit-okr/edit-okr.component.html
@@ -1,34 +1,35 @@
-<div class="okr form bg-white border-0 rounded p-2 m-1">
+<div *ngIf="okr" class="okr form bg-white border-0 rounded p-2 m-1">
   <input class="form-control p-1" [(ngModel)]="okr.objective" placeholder="Objective" />
   <p *ngIf="noObjective" class=" alert alert-warning m-0 p-1">An objective is required to save an OKR</p>
-  <div class="input-group mt-1" *ngFor="let kr of okr.keyResults;index as i">
-    <span class="input-group-btn">
-      <button class="btn btn-dark" style="width: 2rem;" title="Delete Key Result" (click)="removeKeyResult()">x</button>
+  <div class="input-group mt-1" *ngFor="let kr of keyResults;index as i">
+    <span *ngIf="kr" class="input-group-btn">
+      <button class="btn btn-dark" style="width: 2rem;" title="Delete Key Result"
+        (click)="removeKeyResult(kr._id, i)">x</button>
     </span>
-    <input class="form-control" [(ngModel)]="kr.keyResult" placeholder="Key result" />
+    <input *ngIf="kr" class="form-control" [(ngModel)]="kr.keyResult" placeholder="Key result" />
   </div>
   <button class="btn btn-dark mt-1" style="width: 2rem;" (click)="addKeyResult()">+</button>
   <div class="form-group">
-    <label class="mt-1" for="ownerSearchBox">Assigned to <span
-        class="badge badge-primary">{{owner.name}}</span></label>
+    <label class="mt-1" for="ownerSearchBox">Assigned to <span class="badge badge-primary">{{owner.name}}</span></label>
     <input class="form-control p-2" #ownerSearchBox (keyup)="ownerSearch(ownerSearchBox.value)"
       placeholder="Assign to user" />
     <ul *ngIf="users$" class="list-group px-1 py-0">
       <li *ngFor="let user of users$ | async" class="list-group-item py-0 my-0">
-        <a class="btn" [ngClass]="{'bg-light text-primary': user._id==okr.userId}" (click)="assign(user);ownerSearchBox.value=''">
+        <a class="btn" [ngClass]="{'bg-light text-primary': user._id==okr.userId}"
+          (click)="assign(user);ownerSearchBox.value=''">
           {{user.name}}
         </a>
       </li>
     </ul>
   </div>
   <div class="form-group">
-    <label for="parentSearchBox">Linked to <span
-        class="badge badge-primary">{{parent.objective}}</span></label>
+    <label for="parentSearchBox">Linked to <span class="badge badge-primary">{{parent.objective}}</span></label>
     <input class="form-control p-1" #parentSearchBox (keyup)="parentSearch(parentSearchBox.value)"
       placeholder="Link to parent objective" />
     <ul *ngIf="users$" class="list-group px-1 py-0">
       <li *ngFor="let parent of parents$ | async" class="list-group-item py-0 my-0">
-        <a class="btn" [ngClass]="{'bg-light text-primary': parent._id==okr.parent}" (click)="link(parent);parentSearchBox.value=''">
+        <a class="btn" [ngClass]="{'bg-light text-primary': parent._id==okr.parent}"
+          (click)="link(parent);parentSearchBox.value=''">
           {{parent.objective}}
         </a>
       </li>
@@ -36,6 +37,6 @@
   </div>
   <div class="form-inline">
     <button class="btn btn-success mr-1" (click)="save()">Save</button>
-    <button class="btn btn-danger" (click)="hideNew()">Discard</button>
+    <button class="btn btn-danger" routerLink="/company">Go back and discard changes</button>
   </div>
 </div>
