--- a/src/app/okr/okr.component.html
+++ b/src/app/okr/okr.component.html
@@ -12,7 +12,7 @@
       </button>
       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
         <a class="dropdown-item" href="#">Add Child Objective</a>
-        <a class="dropdown-item" href="#">Edit</a>
+        <a class="dropdown-item" routerLink="/edit-okr/{{okr._id}}">Edit</a>
         <a class="dropdown-item" href="#" (click)="deleteOKR()">Delete</a>
       </div>
     </span>
@@ -27,18 +27,20 @@
         class="list-group-item bg-white border border-primary rounded-0 border-right-0 border-top-0 border-bottom-0 py-1 my-1 mr-2">
         {{kr.keyResult}} 
         <span *ngIf="!kr.progress" class="badge badge-secondary">0%</span>
-        <span *ngIf="kr.progress<0.5" class="badge badge-secondary">{{kr.progress}}%</span>
+        <span *ngIf="kr.progress<0.3" class="badge badge-secondary">{{kr.progress}}%</span>
+        <span *ngIf="kr.progress>=0.3 && kr.progress<0.7" class="badge badge-primary">{{kr.progress}}%</span>
+        <span *ngIf="kr.progress>=0.7" class="badge badge-success">{{kr.progress}}%</span>
       </li>
     </ul>
   </div>
     <div *ngIf="!showChildren && (childrenCount > 0)" class="btn btn-link p-0 mt-2" (click)="getChildren()">
-      Child Objectives ({{childrenCount}})
+      Child OKRs ({{childrenCount}})
     </div>
     <div *ngIf="showChildren && (childrenCount > 0)" class="btn btn-link p-0 mt-2" (click)="hideChildren()">
-      Hide Child Objectives
+      Hide Child OKRs
     </div>
   </div>
 </div>
-<div *ngIf="showChildren" class="ml-4 mt-2">
+<div *ngIf="showChildren" class="ml-4 mt-1">
   <app-okr *ngFor="let child of children" [okr]="child" (hideOkrId)=hideChild($event)>child</app-okr>
 </div>
